fix spacing and width issues on ai page

--- a/src/app/ai/page.module.css
+++ b/src/app/ai/page.module.css
@@ -35,6 +35,7 @@
 }
 
 .ai_card {
+    width: 375px;
     padding: 30px;
 
     background-color: var(--bg-dark);
@@ -80,7 +81,7 @@
     overflow: hidden;
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 970px) {
 
     .ai_options {
         display: flex;
